admin/assets/scss/admin.scss
// Define color variables
$grayOne: #151515;
$grayTwo: #616060;
$grayThree: #d9d9d9;
$graySix: #eeeeee;
$grayFour: #f3f3f3;
$grayFive: #f8f8f8;
$wpBlue: #2b76f6;
$Green: #24cb7d;
$brand: #e8294c;
$lightBrand: #fccfd4;
$veryLightBrand: #fff4f5;
$error: #ff3636;

@import "./charts.scss";

:root {
  --box-bar-color: #eff6ff;
}

body {
  &.toplevel_page_slimview1,
  &.slimstat_page_slimview2,
  &.slimstat_page_slimview3,
  &.slimstat_page_slimview4,
  &.slimstat_page_slimview5,
  &.slimstat_page_slimconfig,
  &.slimstat_page_slimpro,
  &.slimstat_page_slimlayout,
  &.slimstat_page_slimemail,
  &.slimstat_page_migration {
    background: #f5f6fa !important;
  }
}

#slimstat-load-saved-filters {
  margin: 0 5px !important;
}

body.index-php {
  .slimstat-tooltip-bar-wrap {
    margin: 0 5px !important;
  }

  .slimstat-tooltip-trigger:has(.slimstat-tooltip-bar-wrap) {
    border: none !important;
  }

  span.slimstat-tooltip-bar {
    display: block;
    height: 100%;
    position: absolute !important;
    top: 0;
    left: 0;
    background-color: var(--box-bar-color);
    border-radius: 6px;
  }

  .postbox p.slimstat-tooltip-trigger {
    margin-bottom: 4px;
    margin-top: 4px;
  }

  .slimstat-browser-icon,
  .slimstat-flag-icon,
  span.slimstat-flag-container {
    position: relative !important;
    width: 18px;
    height: auto !important;
    float: left !important;
    margin: 0px 10px 0px 0px;
    transform: translateY(1px);
    border-radius: 60px;
  }

  .slimstat-author-link {
    img {
      position: relative !important;
      width: 18px;
      height: auto !important;
      float: left !important;
      margin: 0px 10px 0px 0px;
      transform: translateY(1px);
      border-radius: 60px;
    }
  }

  .slimstat-tooltip-trigger {
    .slimstat-tooltip-bar-wrap {
      z-index: 0 !important;
      position: absolute;
      display: block;
      width: calc(100% - 30px);
      height: 100%;
      top: 0;
      left: 0;
      margin: 0px 15px;
      box-sizing: border-box;
    }

    * {
      z-index: 2 !important;
      position: relative;
    }

    a {
      max-width: 80%;
      display: inline-block;
      color: #202224;
      font-weight: 600;
      vertical-align: middle;
      font-size: 12px;
    }
  }

  .inside:has(.map-container) {
    height: auto !important;
  }

  .map-container {
    display: flex;
    flex-wrap: wrap;
    padding: 0px 20px;
    height: 720px !important;
  }

  #map_slim_p6_01 {
    width: 100%;
    height: 395px;
    min-height: 395px;
    flex: 1;

    @media (max-width: 768px) {
      height: 310px;
      min-height: 310px;
      max-height: 310px;
    }
  }

  .top-countries-wrap {
    min-width: 370px;
    max-width: 370px;
    margin-left: 0px;
    display: flex;
    justify-content: center;
    // align-items: center;

    [dir="rtl"] & {
      margin-left: 0;
      margin-right: 0px;
    }

    @media (max-width: 768px) {
      margin-left: 0;
      min-width: 100%;
      max-width: 100%;

      [dir="rtl"] & {
        margin-right: 0;
      }
    }
  }

  .top-countries {
    flex: 1;

    h4 {
      font-weight: 700;
      font-size: 14px;
      line-height: 100%;
      letter-spacing: -0.43px;
    }
  }

  .country-bar {
    display: flex;
    align-items: center;
    margin-bottom: 20px;
    position: relative;
    height: 36px;

    .country-flag-container {
      width: 24px;
      height: 24px;
      border-radius: 100px;
      overflow: hidden;
      margin: 0px 10px 0 0px;
      display: inline-block;
      min-width: 24px;
    }

    strong {
      font-weight: 700;
      font-size: 14px;
      line-height: 100%;
      letter-spacing: 0px;
      vertical-align: middle;
      position: absolute;
      top: 3px;
      left: 43px;
      color: #202224;
    }

    span {
      color: #202224;
      font-weight: 800;
      font-size: 12px;
      line-height: 100%;
      letter-spacing: 0px;
      vertical-align: middle;
      margin-left: 5px;
      margin-top: 23px;
    }
  }

  .country-flag {
    height: auto;
    transform: translateX(-13%);
  }

  .bar-container {
    background-color: #e5e6e9;
    height: 8px;
    width: 100%;
    margin-left: 10px;
    border-radius: 4px;
    margin-top: 25px;
    overflow: hidden;
  }

  .bar-fill {
    height: 100%;
    background-color: #e7294b;
  }

  .map-container {
    flex-direction: column;
  }
  .top-countries {
    margin-left: 0;
    margin-top: 20px;

    [dir="rtl"] & {
      margin-left: 0;
      margin-right: 0;
    }
  }
}

[id^="slim_"] .inside:has(.slimstat-postbox-chart--canvas) {
  margin-bottom: 20px !important;
  height: 265px !important;
  .slimstat-postbox-chart--canvas {
    height: 240px !important;
    width: 100% !important;
    min-height: 240px !important;
    max-height: 240px !important;
  }
}

// Pro compatibility: layout overrides for paginated report widgets
#slim_p8_01 .inside,
#slim_p8_02 .inside,
.report-pages-by-user .inside {
  margin-bottom: 10px !important;
}
// Pro compatibility: layout overrides for paginated report widgets
#slim_p8_01 .pagination,
#slim_p8_02 .pagination,
.report-pages-by-user .pagination {
  position: relative !important;
}
/* ... */

